...
  String get upcomingTab => 'הבאים';

  @override
  String get activityTab => 'פעילות';

  @override
  String get settingsTab => 'הגדרות';

  @override
  String goodMorningUser(String userName) {
    return 'בוקר טוב, $userName';
  }

...
