...
  }
}

enum AppLocaleOption {
  system(null, 'System Default'),
  english(Locale('en'), 'English'),
  arabic(Locale('ar'), 'العربية (Arabic)'),
  hebrew(Locale('he'), 'עברית (Hebrew)');

  final Locale? locale;
  final String label;

  const AppLocaleOption(this.locale, this.label);
}
...
